src/sass/60_components/_components.main-nav.scss
.c-main-nav {
  $c-main-nav: &;

  font-family: $font-family-navigation;
  font-weight: $font-weight-navigation;
  overflow: hidden;
  padding: 0;
  @include media-breakpoint-up(xxl) {
    overflow: inherit;
  }

  &__button {
    .--open {
    }
    .--close {
      display: none;
    }

    @include media-breakpoint-up(xxl) {
      display: none;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    @include media-breakpoint-up(xxl) {
      display: flex;
      flex-direction: row;
      justify-content: flex-end;
      flex-wrap: wrap;
      gap: 1rem;
    }
  }

  &__item {
    font-size: $global-font-size;
    line-height: $small-line-height;
    @include media-breakpoint-up(xxl) {
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center;
    }

    &.--is-top-level {
      #{$c-main-nav}__link {
        text-decoration: underline;
        text-decoration-color: transparent;
        transition: text-decoration 0.1s ease-in-out;

        &:hover,
        &:focus,
        &.--is-active {
          text-decoration-color: var(
            --oo-color-header-text,
            var(--oo-color-text)
          );
        }
      }

      @include media-breakpoint-up(xxl) {
        border: 0;
        flex-basis: content;
        max-width: 25%;

        #{$c-main-nav}__link {
          &.--is-top-level {
            text-decoration: none;
            position: relative;
          }
        }
      }
    }

    &.--has-children {
      @include media-breakpoint-up(xxl) {
        &:hover > #{$c-main-nav}__link.--is-top-level::after,
        &:focus-within > #{$c-main-nav}__link.--is-top-level::after {
          transform: rotate(-180deg);
        }

        &:focus-within {
          > #{$c-main-nav}__sub-menu {
            visibility: visible;
            opacity: 1;
          }
        }

        @media (hover: hover) and (pointer: fine) {
          &:hover,
          &:focus-visible {
            > #{$c-main-nav}__sub-menu {
              visibility: visible;
              opacity: 1;
            }
          }
        }

        &::after {
          content: '';
          position: absolute;
          left: 0;
          opacity: 0;
          background: transparent;
          width: 100%;
          height: 0;
          top: 100%;
          z-index: 10;
          overflow: hidden;
        }

        #{$c-main-nav}__link {
          &.--is-top-level {
            display: flex;
            gap: 1rem;
            align-items: center;

            &::after {
              content: '';
              display: inline-block;
              background-color: var(
                --oo-color-header-text,
                var(--oo-color-text)
              );
              mask: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20version%3D%221.1%22%20viewBox%3D%220%200%2012%206%22%20fill%3D%22none%22%20stroke%3D%22currentColor%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20d%3D%22M0%2C0l6%2C6L12%2C0%22%2F%3E%3C%2Fsvg%3E');
              mask-repeat: no-repeat;
              mask-size: $icon-width-dropdown;
              mask-position: center;
              margin-left: 0.25rem;
              height: $icon-height-dropdown;
              width: $icon-width-dropdown;
              transition: transform 0.2s 0.1s ease-out;
            }

            &::before {
              content: '';
              position: absolute;
              top: 100%;
              left: 50%;
              right: 50%;
              height: 0%;
              background-color: transparent;
              border-top: 1px solid
                var(--oo-color-header-text, var(--oo-color-text));
              transition: left 0.25s ease-in-out, right 0.25s ease-in-out;
              z-index: 1;
            }

            &:hover,
            &:focus {
              &::before {
                left: 0.5rem;
                right: 0.5rem;
                height: 500%;
              }
            }

            &.--is-active {
              &::before {
                left: 0.5rem;
                right: 0.5rem;
              }
            }
          }
        }
      }
    }

    &.--is-active {
      &::after {
        opacity: 1;
      }
    }

    &.--is-ancestor {
    }
  }

  &__link {
    hyphens: auto;
    padding: 0.5rem 0rem 0.5rem 0rem;
    width: 100%;
    font-family: var(--oo-font-navigation, var(--oo-font-text));
    font-size: 1rem;
    color: var(--oo-color-header-text, var(--oo-color-text));
    display: block;
    text-transform: uppercase;
    text-underline-offset: $link-underline-offset;
    letter-spacing: 1.5px;

    @include visited-active() {
      color: var(--oo-color-header-text, var(--oo-color-text));
    }

    &:hover,
    &:focus {
    }

    @include hover-focus() {
      text-decoration-color: var(--oo-color-header-text, var(--oo-color-text));
      color: var(--oo-color-header-text, var(--oo-color-text));
    }

    @include media-breakpoint-down(xl) {
    }

    @include media-breakpoint-up(xxl) {
      padding: 0 0.5rem;
    }

    &.--is-active {
      text-decoration-color: var(--oo-color-header-text, var(--oo-color-text));
      color: var(--oo-color-header-text, var(--oo-color-text));
      position: relative;
    }

    &.--is-ancestor {
      @include media-breakpoint-down(xl) {
        @media (hover: hover) and (pointer: fine) {
          &:hover,
          &:focus-visible {
          }
        }
      }
    }
  }

  &__sub-menu {
    font-family: $font-family-text;
    font-weight: $font-weight-text;
    display: flex;
    flex-direction: column;

    @include media-breakpoint-up(xxl) {
      z-index: 100;
      position: absolute;
      top: 100%;
      left: auto;
      right: auto;
      visibility: hidden;
      opacity: 0;
      min-width: 9.375rem;
      max-width: 18.75rem;
      background-color: var(--oo-color-header-bg, var(--oo-color-bg));
      padding: 0.5rem 0;
      border-left: 1px solid var(--oo-color-header-text, var(--oo-color-text));
      border-right: 1px solid var(--oo-color-header-text, var(--oo-color-text));
      border-bottom: 1px solid var(--oo-color-header-text, var(--oo-color-text));
      transition: text-decoration 0.25s ease-in-out,
        visibility 0.25s ease-in-out, opacity 0.25s ease-in-out;
    }

    #{$c-main-nav}__link {
      text-decoration: underline;
      padding: 0.5rem 0 0.5rem 2rem;
      text-decoration-color: transparent;
      transition: text-decoration 0.1s ease-in-out;

      @include media-breakpoint-up(xl) {
        padding: 0.5rem 1.5rem;
      }

      @media (hover: hover) and (pointer: fine) {
        &:hover,
        &:focus-visible {
          color: var(--oo-color-header-text, var(--oo-color-text));
          text-decoration-color: var(
            --oo-color-header-text,
            var(--oo-color-text)
          );
        }
      }

      @include media-breakpoint-down(xl) {
        padding-inline: 2rem;
      }

      &:last-of-type {
        @include media-breakpoint-up(xxl) {
          border-radius: inherit;
        }
      }

      &.--is-active {
        cursor: default;
        text-decoration: underline;

        @include visited-active() {
          color: var(--oo-color-header-text, var(--oo-color-text));
        }
      }
    }
  }

  &.--is-open {
    width: 100%;
  }
}

